--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "ownerNumber": ["62887435047326@s.whatsapp.net"],
-  "botName": "AlphabotMD",
-  "message" : "62887435047326",
+  "ownerNumber": ["6285773557984@s.whatsapp.net"],
+  "botName": "Dani official",
+  "message" : "6285773557984",
   "sessionName": "session",
   "pathImg": "./media/lol.jpg"
 }
